vertically aligned buttons and corrected border width variables

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -22,7 +22,9 @@
   color: $black;
   width: 3rem;
   height: 3rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
+  text-align: center;
+  border-width: $button-border-radius-v2;
 }
 .button--map-navigation-zoom{
   font-size: 2rem;
@@ -30,6 +32,8 @@
   color: $black;
   width: 3rem;
   height: 3rem;
+  text-align: center;
+  border-width: $button-border-radius-v2;
 }
 
 .button--details {
